<?xml version="1.0"?>
<package>
  <name>openmv_cam</name>
  <version>0.0.1</version>
  <description>The openmv_cam package</description>

  <maintainer email="fabian.schilling@me.com">Fabian Schilling</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
