<?xml version="1.0"?>
<package>
  <name>openmv_cam</name>
  <version>0.0.1</version>
  <description>The openmv_cam package</description>

  <maintainer email="fabian.schilling@me.com">Fabian Schilling</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
